test/src/e2e_vm_tests/test_programs/should_pass/language/u32_bitwise_not/src/main.sw
script;

use core::ops::*;
use std::assert::assert;

fn main() -> bool {
    let a: u32 = 2u32;

    assert(~u32::binary_not(a) == 4294967293u32);

    true
}
