test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u32_mul_overflow/src/main.sw
script;

fn main() -> u32 {
    let a: u32 = u32::max();
    let b: u32 = 2;

    let result: u32 = a * b;
    result
}
